Add:carrierwaveの導入 uploader作成及びマウント 入力フォーム、コントローラーのストロングパラメータ、viewファイルの編集

--- a/app/views/contents/_form.html.erb
+++ b/app/views/contents/_form.html.erb
@@ -16,6 +16,11 @@
     <%= form.text_field :title %>
   </div>
 
+  <div class="field">
+    <%= form.label :video_url %><br>
+    <%= form.file_field :video_url, :accept => 'video/*' %>
+  </div>
+
   <div class="actions">
     <%= form.submit %>
   </div>
