--- a/app/views/users_videos/edit.html.erb
+++ b/app/views/users_videos/edit.html.erb
@@ -1,6 +1,6 @@
-<h1>Editing users_video</h1>
+<h1>Editing user_video</h1>
 
-<%= render 'form', users_video: @users_video %>
+<%= render 'form', user_video: @user_video %>
 
-<%= link_to 'Show', @users_video %> |
-<%= link_to 'Back', users_videos_path %>
+<%= link_to 'Show', @user_video %> |
+<%= link_to 'Back', user_videos_path %>
