--- a/app/views/users_videos/new.html.erb
+++ b/app/views/users_videos/new.html.erb
@@ -1,5 +1,5 @@
 <h1>New UsersVideo</h1>
 
-<%= render 'form', users_video: @users_video %>
+<%= render 'form', user_video: @user_video %>
 
-<%= link_to 'Back', users_videos_path %>
+<%= link_to 'Back', user_videos_path %>
