--- a/app/views/users_videos/show.html.erb
+++ b/app/views/users_videos/show.html.erb
@@ -2,11 +2,11 @@
 
 <p>
   <strong>Title:</strong>
-  <% if @users_video.video_url.present? %>
-    <%= video_tag(@users_video.transcoded_video_url.to_s, :controls => true) %>
+  <% if @user_video.video_url.present? %>
+    <%= video_tag(@user_video.transcoded_video_url.to_s, :controls => true) %>
   <% end %>
 
 </p>
 
-<%= link_to 'Edit', edit_users_video_path(@users_video) %>
-<%= link_to 'Back', users_videos_path %>
+<%= link_to 'Edit', edit_user_video_path(@user_video) %>
+<%= link_to 'Back', user_videos_path %>
